Closed
Bug 155679
Opened 23 years ago
Closed 23 years ago
Mapi with Multiple Profiles and Quick Launch fails in different ways
Categories
(Core Graveyard :: QuickLaunch (AKA turbo mode), defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.0.2
People
(Reporter: nbaca, Assigned: morse)
References
Details
(Whiteboard: [adt2 rtm])
Attachments
(1 file, 1 obsolete file)
|
826 bytes,
patch
|
jag+mozilla
:
superreview+
jud
:
approval+
|
Details | Diff | Splinter Review |
Overview: A variety of problems occur when using Mapi with Quick Launch.
1. On my WinMe system using branch build 2002-07-01, Quick Launch on I:
- was able to send 2 separate Word documents using mapi
- on the third attempt it reported an error with the address book on the
exchange server (why it referenced an exchange server I don't know).
- 4th attempt it reported the same error
- Turned Quick Launch off and then Mapi worked
- Turned Quick Launch back on and it successfully sent a word document
- Able to send a second and third time
- Interesting the Wordpad does not work at all
2. Win2k:
a. Gaytri's Win2k system, after turning Quick Launch on it failed. After turning
Quick Launch off then it was successful.
b. Stephen's Win2k system experienced similar problems when trying to send a
Power Point Presentation. With Quick Launch and Mapi turned on, if it worked at
all, then it opened the Browser but not the Compose window.
| Reporter | ||
Comment 1•23 years ago
|
||
Marking nsbeta1 so that Mapi will work with Quick Launch.
Keywords: nsbeta1
| Reporter | ||
Comment 2•23 years ago
|
||
** The problem occurs with Multilple Profiles with Quick Launch and Mapi enabled**
Steps to reproduce:
1. Make sure that you have 2 profiles
2. In one profile enable Mapi and Quick Launch
3. Close the app
4. Open Word, File|Send a document
Actual Results: No Netscape window opens.
Expected Results: I would expect the Profile Manager to appear. Once a profile
was selected then it would automatically display a Compose window for the
default mail account.
Additional Information:
- It is ok using one profile with Quick Launch and Mapi enabled.
- It is also ok with multiple profiles with Mapi enabled (but Quick Launch disabled)
- The problem with Wordpad is logged in a different bug.
Note to QA: When verifying this bug try different applications such as Word,
Excel and PowerPoint.
Summary: Mapi with Quick Launch fails in different ways → Mapi with Multiple Profiles and Quick Launch fails in different ways
Comment 3•23 years ago
|
||
Rajiv, Bill Law and/or Steve Morse should be able to help you fix this.
Updated•23 years ago
|
| Assignee | ||
Comment 4•23 years ago
|
||
I'll take this one. It's a quicklaunch problem.
Assignee: rdayal → morse
Component: Simple MAPI → QuickLaunch (AKA turbo mode)
Product: MailNews → Browser
Target Milestone: --- → M1
| Assignee | ||
Comment 5•23 years ago
|
||
OK, I have a patch that fixes the problem.
In testing it, I observed another problem. Namely if you are not running the
browser (not even in turbo mode) and you issue a MAPI command from an app (i.e.,
WORD: file->send-document), two windows will open -- one for the composer as
expected, and one for the browser itself. This occurs for both single
profiles and multiple profiles. I backed out the patch and it still occurs. So
this has nothing to do with turbo nor with multiple profiles, but is a MAPI bug.
And it has nothing to do with the current bug report. Is there a bug report
open on that or should I file it?
Status: NEW → ASSIGNED
Target Milestone: M1 → mozilla1.0.2
| Assignee | ||
Comment 6•23 years ago
|
||
Comment 7•23 years ago
|
||
In fact there is no need to even check for the MAPIStartup commandline argument
since that was put in there so that no additional window is opened for MAPI and
another part of code did nsINativeAppSupport::SetShouldShowUI(PR_FALSE) in the
0.94 branch for N6.2 release. However that ..ShowUI code never landed on trunk
since the right thing to do was to implement a Command line handler for MAPI
but the nsICmdLineHandler did not provide support for arbitrary processing as
required in this case. And there were lots of request to rewrite the entire
nsICmdLineHandler interface rather than enhance it to support arbitrary
processing. And this is the same reason why you see a browser window opened up
when MAPI is called.
Anyway since there doesnot exist code to supress the browser window from coming
up when MAPI call is made, there is no point in even checking for the MAPI
Startup Arg. The EnsureProfile statement that is anyway in the HandleRequest
function will display the profile selection dialog in case if either Mozilla is
not running or running in Quick Launch mode.
Steve, I have attached a new patch for this, hope that is fine. I have tested
this patch with multiple profiles, single profile in Quick Launch as well as
otherwise.
Comment 8•23 years ago
|
||
| Assignee | ||
Comment 9•23 years ago
|
||
Rajiv,
Your patch was the very first thing that I tried. It works but it opens up two
windows -- a composer window and a browser window. That's why I rejected it.
With my patch I don't get the double windows when mozilla is running (with
or without any open windows). I get the double window only when mozilla is not
running. With your patch I get the double windows in all cases -- whether
mozilla is running or not.
Comment 10•23 years ago
|
||
That is surprising, I do not see it open another browser window if a browser
window is already open. But I do see the browser window open up if Mozilla is
running in turbo mode without any browser window already open. Also reading your
comments earlier I thought that is what you see with your patch too so I did not
see any advantage in doing the check for MAPIStartup arg.
Comment 11•23 years ago
|
||
Comment on attachment 90265 [details] [diff] [review]
patch to not check for MAPIStartup arg and return
Marking this as obsolete since the earlier patch works better in case if
Mozilla is already running in turbo mode without any window open.
Attachment #90265 -
Attachment is obsolete: true
Comment 12•23 years ago
|
||
From the update of (id=90245):
What if u move the check for MAPIStartup arg after the EnsureProfile call ?
Besides that r=rdayal.
| Assignee | ||
Comment 13•23 years ago
|
||
Let me clarify what I said because it is confusing. All the following is with
two profiles.
1. Without any patch:
no windows open, no turbo icon: MAPI opens browser and composer windows
no windows open, have turbo icon: MAPI does nothing <<this bug>>
2. With my patch ("allows MAPI to work with turbo with multiple profiles")
no windows open, no turbo icon: MAPI opens browser and composer windows
no windows open, have turbo icon: MAPI opens composer windows
3. With Rajiv's patch ("patch to not check for MAPIStartup arg and return")
no windows open, no turbo icon: MAPI opens browser and composer windows
no windows open, have turbo icon: MAPI opens browser and composer windows
Comment 14•23 years ago
|
||
Comment on attachment 90245 [details] [diff] [review]
Allows MAPI to work with turbo with multiple profiles
sr=jag
Attachment #90245 -
Flags: superreview+
| Assignee | ||
Comment 15•23 years ago
|
||
Landed on trunk
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 16•23 years ago
|
||
trix, can you verify this fix on the trunk. Thx.
Comment 17•23 years ago
|
||
looked at it on todays trunk build 2002070913-trunk and it still isn't fixed.
already spoke to rajiv about the problem.
Comment 18•23 years ago
|
||
my mistake on this verification on trunk build, i used wordpad to test SMAPI and
forgot about the bug already documented about SMAPI not working on wordpad.
verified on MS WORD, EXCEL, and powerpoint with quicklaunch enabled with
multiple profiles and SMAPI is working.
marking verified
Status: RESOLVED → VERIFIED
Comment 19•23 years ago
|
||
adding adt1.0.1+. Please get drivers approval before checking into the branch.
Keywords: adt1.0.1+,
mozilla1.0.1
Updated•23 years ago
|
Attachment #90245 -
Flags: approval+
Comment 20•23 years ago
|
||
please checkin to the 1.0.1 branch. once there, remove the "mozilla1.0.1+"
keyword and add the "fixed1.0.1" keyword.
Keywords: mozilla1.0.1 → mozilla1.0.1+
| Assignee | ||
Updated•23 years ago
|
Keywords: mozilla1.0.1+ → fixed1.0.1
Comment 21•23 years ago
|
||
verified on branch build 20020711, changing keyword to verified1.0.1
Keywords: fixed1.0.1 → verified1.0.1
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•