bug 155679, mapi with turbo and multiple profile doesn't work, r=rdayal, sr=jag